[package]
edition      = "2024"
name         = "rust-demo"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "rust-demo"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c6", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "unstable",
  "esp-now",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
ws2812-async = "0.3.0"
embedded-hal-async = "1.0.0"
smart-leds = "0.4.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
serde = { version = "1.0.228", default-features = false, features = ["serde_derive"] }
postcard = { version = "1.1.3", features = ["alloc", "defmt"] }
heapless = "0.9.2"
ccm = { version = "0.5.0", default-features = false, features = ["alloc"] }
aes = "0.8.4"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
